bluegreen/old-ingress/bluegreen-preview-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: bluegreen-demo-preview
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
  - http:
      paths:
      - path: /preview
        pathType: Prefix
        backend:
          service:
            name: bluegreen-demo-preview
            port:
              name: http
